Fix issue where title is too long on a post

--- a/app/assets/stylesheets/themes/theme1/posts.css.scss
+++ b/app/assets/stylesheets/themes/theme1/posts.css.scss
@@ -1,5 +1,11 @@
 #theme_1 {
 
+  #posts {
+    .title {
+      height: 70px;
+    }
+  }
+
   #post-header {
     h1 {
       padding: 0 15px;
